added augment support, improved asset management, fixed some translation/rotation/uv, added beautiful (/s) textures for testing